Multicast - added placeholder

--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@
         <h3>Publish/Subscribe</h3>
       </section>
       <section>
+        <h3>Multicast</h3>
+      </section>
+      <section>
         <h3>Extensibility</h3>
       </section>
     </section>
